[REFACTOR] Apply code review: refactor, add docs, and test for AsyncNotificationService